@@ -8,6 +8,7 @@ license             = Perl_5
 :version = 0.019
 installer = ModuleBuildTiny
 Test::MinimumVersion.max_target_perl = 5.010000
+Test::ReportPrereqs.include = feature
 
 ; authordep Pod::Weaver::Section::Contributors
 
